Fixed left-aligned formatting issue on countdown timer.

--- a/src/common/_normalize.scss
+++ b/src/common/_normalize.scss
@@ -528,3 +528,10 @@ table {
 tr:nth-child(even) {
     background-color: #fafafa;
 }
+
+#timezone, #signup {
+	display: block;
+width: 120px;
+	margin-left: auto;
+	margin-right: auto;
+}
