--- a/src/components/countdown-timer/_countdown-timer.scss
+++ b/src/components/countdown-timer/_countdown-timer.scss
@@ -1,6 +1,7 @@
 
 	countdown-timer{
 		display: block;
+		width: 800px;
+		margin-left: auto;
+		margin-right: auto;
 	}
-
-
